<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c3f18e"
    android:baselineAligned="false"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/idImagem_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/idLabel_Usuario_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/label_usuario"
        android:textAlignment="textStart"
        android:layout_gravity="start"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/id_Texto_Usuario_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/id_Label_Senha_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/label_senha"
        android:textAlignment="textStart"
        android:layout_gravity="start"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/idTexto_Senha_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <CheckBox
        android:id="@+id/IdCheckBox_Libera_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/check_box_login"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <Button
        android:id="@+id/idBotao_Logar"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_green_dark"
        android:foregroundGravity="center_vertical|center_horizontal"
        android:onClick="loginSistema"
        android:text="@string/botao_logar"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />
</LinearLayout>