<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#c3f18e"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/idTexto_MensagemInicial_Cliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.02"
            android:text="@string/mensagem_tela_inicial"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/id_MenuInicial_Cliente_Carrinho"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.02"
            android:background="#c8f2b9"
            android:clickable="true"
            android:drawableLeft="@drawable/icons29"
            android:drawableStart="@drawable/icons29"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="selecionarOpcao"
            android:text="@string/menu_meu_carrinho"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/id_MeniInicial_Cliente_Chamar_Garcom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.06"
            android:background="#c8f2b9"
            android:clickable="true"
            android:drawableLeft="@drawable/icons24"
            android:drawableStart="@drawable/icons24"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="selecionarOpcao"
            android:text="@string/menu_solicitar_garcom"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/id_MenuInicial_Cliente_Menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.06"
            android:background="#c8f2b9"
            android:clickable="true"
            android:drawableLeft="@drawable/icon22"
            android:drawableStart="@drawable/icon22"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="selecionarOpcao"
            android:text="@string/menu_cardapio"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="26sp"
            android:textStyle="bold" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textAppearance=
            "?android:attr/textAppearanceLarge"/>

</LinearLayout>