<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:background="@android:color/holo_green_dark"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="#c3f18e"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/idTeste"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            app:srcCompat="@mipmap/ic_launcher"
            tools:ignore="ObsoleteLayoutParam"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/txtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/idTeste"
            android:layout_below="@+id/idTeste"
            android:layout_marginEnd="33dp"
            android:layout_marginRight="33dp"
            android:text="@string/nome_item"
            android:textAlignment="center"
            android:textColor="#0e11d1"
            android:textSize="17sp"
            tools:ignore="ObsoleteLayoutParam,RtlHardcoded" />

        <TextView
            android:id="@+id/txtPreco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/preco"
            android:textAlignment="center"
            android:textColor="#ce1309"
            android:textSize="17sp"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

</RelativeLayout>