<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c3f18e"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/idDescricaoMenuCadastrar"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#c3f18e"
        android:text="@string/cadastrar_item_menu"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/idCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/spinner"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />

    <Spinner
        android:id="@+id/idSpinnerMenuCadastro"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:background="@android:color/background_light" />

    <android.support.v4.view.ViewPager
        android:id="@+id/id_imagem_view_pager_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/background_light" />

    <TextView
        android:id="@+id/idTextView_nome_item_tela_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/nome_do_item"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/idCadastrarNomeItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/background_light"
        android:inputType="text"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/idTextView_descricao_item_tela_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/descricao_do_item"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/idCadastrarDescricaoItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/background_light"
        android:inputType="text"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/idTextView_preco_item_tela_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/preco_do_item"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/idCadastrarPrecoItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/background_light"
        android:inputType="numberDecimal"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <Button
        android:id="@+id/idBotaoSalvarNovoItem"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/holo_green_dark"
        android:foregroundGravity="center"
        android:onClick="cadastrar"
        android:gravity="center_vertical|center_horizontal|center"
        android:text="@string/texto_botao_salvar_cadastro_item" />

</LinearLayout>
