<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_weight="0.60"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/idListaItens_Imagem_do_Item"
                android:layout_width="158dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/imagem_item"
                app:srcCompat="@mipmap/ic_launcher" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.71"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1.71"
                android:orientation="horizontal">

                <TextView
                android:id="@+id/idListaItens_Nome_Item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/nome_do_item"
                android:textColor="@android:color/black"
                android:textSize="30sp" />
            </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1.71"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/idSifrao"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/sifrao"
                        android:textColor="@android:color/black"
                        android:textSize="26sp" />

                <TextView
                android:id="@+id/idListaItens_Preco_Item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/preco_do_item"
                android:textColor="@android:color/black"
                android:textSize="26sp" />
        </LinearLayout>
            </LinearLayout>

    </LinearLayout>

</LinearLayout>