<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c3f18e"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.92"
        android:background="#c3f18e"
        android:orientation="vertical"
        android:weightSum="1">

        <android.support.v4.view.ViewPager
            android:id="@+id/idImagem_view_pager_menu_detalhado"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/background_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/idLabel_pPreco_Menu_Detalhado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_valor"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/idPreço_do_Item_Menu_Detalhado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light"
                android:text="@string/preco_item"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/idLabel_Descricao_Menu_Detalhado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/label_descricao_item"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded">

            <TextView
                android:id="@+id/idTexto_Descricao_Menu_Detalhado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/descricao_teste"
                android:textAlignment="textStart"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </ScrollView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="#c3f18e"
        android:gravity="fill_vertical|center_horizontal|center"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageButton
            android:id="@+id/idBotao_Remover_Item_Menu_Detalhado"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.51"
            android:background="#c3f18e"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/icons14" />

        <TextView
            android:id="@+id/idTexto_Qauntidade_Menus_Detalhado"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.05"
            android:background="@android:color/background_light"
            android:text="@string/quantidade_adicionada_de_item"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="50sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/idBotao_Adicionar_Item_Menu_Detalhado"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.44"
            android:background="#c3f18e"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/icons118" />


    </LinearLayout>
</LinearLayout>